was-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websphere-liberty-app
  namespace: ns1
spec:
  selector:
    matchLabels:
      app: websphere-liberty-app
  replicas: 1
  template:
    metadata:
      labels:
        app: websphere-liberty-app
    spec:
      containers:
        - name: websphere-liberty-app
          image: websphere-liberty:19.0.0.9-webProfile8-java11
          ports:
            - containerPort: 9080
