was-service1.yml
apiVersion: v1
kind: Service
metadata:
  name: websphere-liberty-service1
  namespace: ns30
spec:
  selector:
    app: websphere-liberty-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
