was-service2.yml
apiVersion: v1
kind: Service
metadata:
  name: websphere-liberty-service2
  namespace: ns30
spec:
  selector:
    app: websphere-liberty-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
